force-app/main/default/objects/ArchivoExterno__c/fields/Entregable__c.field-meta.xml
<CustomField>
    <fullName>Entregable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo de Entregables</label>
    <referenceTo>Entregable__c</referenceTo>
    <relationshipLabel>Documentos SharePoint</relationshipLabel>
    <relationshipName>DocumentosSharepoint</relationshipName>
    <type>Lookup</type>
</CustomField>