force-app/main/default/objects/ArchivoExterno__c/fields/Evidencia_Estado_Entregable__c.field-meta.xml
<CustomField>
    <fullName>Evidencia_Estado_Entregable__c</fullName>
    <description>Indica el estado del Entregable al que corresponde el documento</description>
    <inlineHelpText>Indica el estado del Entregable al que corresponde la evidencia</inlineHelpText>
    <label>Evidencia Estado Entregable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finalizado</fullName>
            </value>
            <value>
                <fullName>Liberado</fullName>
            </value>
            <value>
                <fullName>Firmado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>