force-app/main/default/objects/ArchivoExterno__c/fields/Firmado__c.field-meta.xml
<CustomField>
    <fullName>Firmado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firmado</label>
    <type>Checkbox</type>
</CustomField>