force-app/main/default/objects/ArchivoExterno__c/fields/Subentregable__c.field-meta.xml
<CustomField>
    <fullName>Subentregable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entregable</label>
    <referenceTo>Subentregable__c</referenceTo>
    <relationshipLabel>Documentos SharePoint</relationshipLabel>
    <relationshipName>DocumentosSharePoint</relationshipName>
    <type>Lookup</type>
</CustomField>