force-app/main/default/objects/ArchivoExterno__c/fields/URL_LONG__c.field-meta.xml
<CustomField>
    <fullName>URL_LONG__c</fullName>
    <label>URL</label>
    <length>1050</length>
    <type>LongTextArea</type>
</CustomField>